--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-image": "^4.0.3",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "styled-component": "^2.8.0",
