--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.25.0",
     "color": "^4.2.0",
     "date-fns": "^2.28.0",
+    "mysql": "^2.18.1",
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
