--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "axios": "^0.25.0",
     "color": "^4.2.0",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.10.7",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "next": "^12.0.9",
+    "next-connect": "^0.11.1",
+    "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-image": "^4.0.3",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "typescript": "^4.5.5"
   }
 }
