--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@material/card": "^13.0.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
@@ -20,7 +21,7 @@
     "antd": "^4.18.5",
     "axios": "^0.25.0",
     "color": "^4.2.0",
-    "date-fns": "^2.28.0",
+    "date-fns": "2.22.1",
     "dayjs": "^1.10.7",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
@@ -29,6 +30,7 @@
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.0",
     "react-image": "^4.0.3",
     "react-images": "^1.2.0-beta.7",
     "react-photo-gallery": "^8.0.0",
