--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "color": "^4.2.0",
     "date-fns": "2.22.1",
     "dayjs": "^1.10.7",
+    "global": "^4.4.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "next": "^12.0.9",
