--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "next": "^12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-image": "^4.0.3",
     "react-images": "^1.2.0-beta.7",
     "react-photo-gallery": "^8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "styled-component": "^2.8.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "8.7.0",
