--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
@@ -31,6 +30,7 @@
     "path": "^0.12.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.0.2",
     "react-hook-form": "^7.26.0",
     "react-image": "^4.0.3",
     "react-images": "^1.2.0-beta.7",
