통합 v.0.1.1 (About, Pre-Producion 디비 연결 완료)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/component/PlanInfoTable.js"  ],
+, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js"  ],
   "exclude": [
     "node_modules"
   ]
