***TechDiscussInfo 카드 넘어가는 것까지 완료***

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js"  ],
+, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js", "pages/HopeDashboard.js", "pages/TechDashboard.ㅓㄴ"  ],
   "exclude": [
     "node_modules"
   ]
