--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js"  ],
+, "src/component/PlanInfoTable.js", "pages/Panels/HopeInfo/HopeInfoPanel.js"  ],
   "exclude": [
     "node_modules"
   ]
