--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@devexpress/dx-react-scheduler": "^3.0.2",
+    "@devexpress/dx-react-scheduler-material-ui": "^3.0.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@material/card": "^13.0.0",
-    "@mui/icons-material": "^5.3.1",
+    "@mui/icons-material": "^5.4.2",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.4.1",
     "antd": "^4.18.5",
     "axios": "^0.25.0",
+    "clsx": "^1.1.1",
     "color": "^4.2.0",
     "cookie": "^0.4.2",
     "date-fns": "2.22.1",
