--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dayjs": "^1.10.7",
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "next": "^12.0.9",
