--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js", "pages/HopeDashboard.js", "pages/TechDashboard.ㅓㄴ", "src/component/TechCommentBoxtsx", "pages/tstCss.js", "pages/tstCss.js", "pages/tstCss.js", "pages/tstCss.js"  ],
+, "src/component/PlanInfoTable.js", "pages/HopeInfoPanel.js", "pages/HopeDashboard.js", "pages/TechDashboard.ㅓㄴ", "src/component/TechCommentBoxtsx", "pages/tstCss.js", "pages/tstCss.js", "pages/tstCss.js", "pages/tstCss.js", "pages/tstSchedulerFucStyle.js"  ],
   "exclude": [
     "node_modules"
   ]
